# libbonoboui

./: Makefile  README.md  libbonoboui.spec
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.in  libbonoboui-zip.in
src/bonobo/: Makefile.am  Makefile.in  bonobo-a11y.c  bonobo-a11y.h  bonobo-canvas-component.c  bonobo-canvas-item.c  bonobo-control-frame.c  bonobo-control.c  bonobo-dock-band.c  bonobo-dock-item-grip.c  bonobo-dock-item-grip.h  bonobo-dock-item.c  bonobo-dock-layout.c  bonobo-dock.c  bonobo-file-selector-util.c  bonobo-plug.c  bonobo-selector-widget.c  bonobo-selector.c  bonobo-socket.c  bonobo-ui-component.h  bonobo-ui-config-widget.c  bonobo-ui-container.c  bonobo-ui-engine-config.c  bonobo-ui-engine.c  bonobo-ui-init-gtk.c  bonobo-ui-internal-toolbar.c  bonobo-ui-main.c  bonobo-ui-node.c  bonobo-ui-preferences.c  bonobo-ui-private.h  bonobo-ui-sync-keys.c  bonobo-ui-sync-keys.h  bonobo-ui-sync-menu.c  bonobo-ui-sync-menu.h  bonobo-ui-sync-status.c  bonobo-ui-sync-status.h  bonobo-ui-sync-toolbar.c  bonobo-ui-sync.c  bonobo-ui-toolbar-button-item.c  bonobo-ui-toolbar-control-item.c  (+15 more)
src/doc/: Makefile.in  ui-xml.txt
src/glade/: Makefile.in  glade-bonobo.c
src/po/: ChangeLog  LINGUAS  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  (+54 more)
src/samples/: Makefile.in
(+108 files in other folders)
