SUBDIRS = bonobo glade samples tests tools po doc

libincludedir = $(includedir)/libbonoboui-2.0
libinclude_HEADERS =    \
	bonobo.h	\
	libbonoboui.h

EXTRA_DIST = \
	MAINTAINERS	     \
	libbonoboui-zip.in   \
	changes.txt          \
	gtk-doc.make

DISTCLEANFILES =

DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc

